feat: Use Postgres

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,9 @@
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: texts_api_development
+  host: localhost
 
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-
+  adapter: postgresql
+  database: texts_api_test
+  host: localhost
